Creating Partials and Adding Styles

--- a/client/layouts/homeLayout.html
+++ b/client/layouts/homeLayout.html
@@ -1,10 +1,6 @@
 <template name="HomeLayout">
 
-    <header>
-        <h1>Recipe Book</h1>
-        {{> loginButtons}}
-
-    </header>
+    {{> Header}}
 
     <main>
         <div class="billboard">
