--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,12 +1,8 @@
 <template name="MainLayout">
 
-    <header>
-        <h1>Recipe Book</h1>
-        {{> loginButtons}}
-
-    </header>
-
-    <main>
+    {{> Header}}
+    {{> SideNav}}
+    <main class="main-layout">
 
         {{> Template.dynamic template=main}}
 
